fixed z-index settings

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -192,7 +192,7 @@ a, h1, h2, h3, h4, h5, h6 .nav-button{
   top: 0;
   right: 0;
   position: fixed;
-  z-index: 2;
+  z-index: 55;
   width: 100%;
   height: 100%;
   pointer-events: none;
